# test2

YN_SS_AIclass-main/: .gitignore  LICENSE  README.md  api_app_main.py  data_explore.py  data_harvest.py  migrate.py  pyproject.toml  test_client.py
YN_SS_AIclass-main/API_app/apis/: test.py
YN_SS_AIclass-main/API_app/model/: dataclass.py
YN_SS_AIclass-main/API_app/routes/: CONDB.py  DBLine.py  NN01.py  conWS.py  test.py
YN_SS_AIclass-main/API_app/static/: styles.css
YN_SS_AIclass-main/API_app/templates/: Chat_01.html  Chat_02.html  Chat_03.html  D3_test.html  NN01_home.html  base.html  charts_example_01.html  charts_example_02.html  root_index.html  src_FSChart.html
YN_SS_AIclass-main/DW/API/: __init__.py  api_work.py  dataclasses.py  form.py  pipline.py
YN_SS_AIclass-main/DW/DB/: __init__.py  async_connection.py  connection.py
YN_SS_AIclass-main/DW/DB/db_models/: CSCIDS2017.py  base_model.py
YN_SS_AIclass-main/DW/DB/query/: crud.py
YN_SS_AIclass-main/GUI/: DataView.py  GraphScreen.py  GraphScreen_mlp.py
YN_SS_AIclass-main/GUI/srcUI/: example01.ui
YN_SS_AIclass-main/ML_BASE/: ML_main.py
YN_SS_AIclass-main/ML_BASE/ML_models/: LSTM_ex01.py  Seq2Seq_ex02.py  Seq2Seq_ex03.py  exp_stat.py
YN_SS_AIclass-main/ML_BASE/ML_models/BIVA/: BIVA.py  BIVA_BRITS.py  BIVA_LSTM_VAE.py  BIVA_RITS.py  exp_basic.py  (+1 more)
YN_SS_AIclass-main/ML_BASE/ML_operate/: operator.py  trainTool.py
YN_SS_AIclass-main/ML_BASE/data_provider/: ML_DataReady.py  data_factory.py  data_loader.py  data_loader_CSCIDS.py  data_loader_edit.py
YN_SS_AIclass-main/core/: .env  config.py
(+3 files in other folders)
